# Revenue-LLM-Augmented-Workflow-with-Ollama-and-Langchain

./: README.md
src/: agent.py  report_generator.py  requirement.txt  ticker_resolver.py  tool_analysis.py
src/revenuescript/: __init__.py  main.py  phase1_check.py  pyproject.toml  trend_dashboard.py
